@@ -235,10 +235,8 @@ public class ReportGenerator {
                 .getGraphConfigurations();
 
         // Process configuration to build graph consumers
-        for (Map.Entry<String, GraphConfiguration> entryGraphCfg : graphConfigurations
-                .entrySet()) {
-            addGraphConsumer(nameFilter, excludeControllerFilter,
-                    entryGraphCfg);
+        for (Map.Entry<String, GraphConfiguration> entryGraphCfg : graphConfigurations.entrySet()) {
+            addGraphConsumer(nameFilter, excludeControllerFilter, entryGraphCfg);
         }
 
         // Generate data
@@ -316,7 +314,8 @@ public class ReportGenerator {
             tmpDirCreated = tmpDir.mkdir();
             if (!tmpDirCreated) {
                 String message = String.format(
-                        "Cannot create temporary directory \"%s\".", tmpDir);
+                        "Cannot create temporary directory \"%s\", check property \"%s\"", tmpDir.getAbsolutePath(), 
+                        ReportGeneratorConfiguration.REPORT_GENERATOR_KEY_TEMP_DIR);
                 log.error(message);
                 throw new GenerationException(message);
             }
@@ -335,7 +334,7 @@ public class ReportGenerator {
         String className = graphConfiguration.getClassName();
         try {
             Class<?> clazz = Class.forName(className);
-            Object obj = clazz.newInstance();
+            Object obj = clazz.getDeclaredConstructor().newInstance();
             AbstractGraphConsumer graph = (AbstractGraphConsumer) obj;
             graph.setName(graphName);
             
@@ -353,14 +352,14 @@ public class ReportGenerator {
                 setProperty(className, obj, methods, propertyName,
                         propertyValue, setterName);
             }
+            graph.initialize(); 
 
             // Choose which entry point to use to plug the graph
             AbstractSampleConsumer entryPoint = graphConfiguration
                     .excludesControllers() ? excludeControllerFilter
                     : nameFilter;
             entryPoint.addSampleConsumer(graph);
-        } catch (ClassNotFoundException | IllegalAccessException
-                | InstantiationException | ClassCastException ex) {
+        } catch (ClassCastException | IllegalArgumentException |  ReflectiveOperationException | SecurityException ex) {
             String error = String.format(INVALID_CLASS_FMT, className);
             log.error(error, ex);
             throw new GenerationException(error, ex);
@@ -374,20 +373,17 @@ public class ReportGenerator {
         String className = exporterConfiguration.getClassName();
         try {
             Class<?> clazz = Class.forName(className);
-            Object obj = clazz.newInstance();
+            Object obj = clazz.getDeclaredConstructor().newInstance();
             DataExporter exporter = (DataExporter) obj;
             exporter.setName(exporterName);
 
             // Export data
             exporter.export(sampleContext, testFile, configuration);
-        } catch (ClassNotFoundException | IllegalAccessException
-                | InstantiationException | ClassCastException ex) {
+        } catch (ReflectiveOperationException | ClassCastException ex) {
             String error = String.format(INVALID_CLASS_FMT, className);
-            log.error(error, ex);
             throw new GenerationException(error, ex);
         } catch (ExportException ex) {
             String error = String.format(INVALID_EXPORT_FMT, exporterName);
-            log.error(error, ex);
             throw new GenerationException(error, ex);
         }
     }
@@ -554,8 +550,7 @@ public class ReportGenerator {
                                                 parameterType
                                                         .getName()));
                             }
-                            method.invoke(obj, converter
-                                    .convert(propertyValue));
+                            method.invoke(obj, converter.convert(propertyValue));
                         }
                         return;
                     }
